load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["config.bzl"],
    visibility = ["//visibility:public"],
)

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "@bazel_tools//tools/cpp:lib_cc_configure.bzl",
        "@bazel_skylib//lib:collections",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
        "//toolchain:unix_cc_configure.bzl",
    ],
    visibility = ["//visibility:public"],
)
