load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["config.bzl"],
    visibility = ["//visibility:public"],
)

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "//sysroot:flags.bzl",
    ],
    visibility = ["//visibility:public"],
)
