# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Copyright (c) Thulio Ferraz Assis 2024
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

build_test(
    name = "hello_world_c_build_test",
    targets = [
        ":hello_world_c",
        ":hello_world_c_linux_aarch64",
        ":hello_world_c_linux_armv7",
    ],
)

cc_binary(
    name = "hello_world_c",
    srcs = ["main.c"],
)

platform_transition_filegroup(
    name = "hello_world_c_linux_aarch64",
    srcs = [":hello_world_c"],
    target_platform = "//platforms:aarch64_linux",
)

platform_transition_filegroup(
    name = "hello_world_c_linux_armv7",
    srcs = [":hello_world_c"],
    target_platform = "//platforms:armv7_linux",
)
