# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

build_test(
    name = "hello_world_cpp_build_test",
    targets = [
        ":hello_world_cpp",
        ":hello_world_cpp_linux_aarch64_tar",
        ":hello_world_cpp_linux_armv7_tar",
    ],
)

cc_binary(
    name = "hello_world_cpp",
    srcs = ["main.cpp"],
    data = ["names.txt"],
)

cc_test(
    name = "hello_world_cpp_test",
    srcs = ["main.cpp"],
    data = ["names.txt"],
)

platform_transition_filegroup(
    name = "hello_world_cpp_linux_aarch64",
    srcs = [":hello_world_cpp"],
    target_platform = "//platforms:aarch64_linux",
)

pkg_tar(
    name = "hello_world_cpp_linux_aarch64_tar",
    srcs = [":hello_world_cpp_linux_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "hello_world_cpp_linux_armv7",
    srcs = [":hello_world_cpp"],
    target_platform = "//platforms:armv7_linux",
)

pkg_tar(
    name = "hello_world_cpp_linux_armv7_tar",
    srcs = [":hello_world_cpp_linux_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)

cc_binary(
    name = "hello_world_cpp_static",
    srcs = ["main.cpp"],
    data = ["names.txt"],
    features = ["static_libstdcxx"],
)

platform_transition_filegroup(
    name = "hello_world_cpp_static_linux_aarch64",
    srcs = [":hello_world_cpp_static"],
    target_platform = "//platforms:aarch64_linux",
)

pkg_tar(
    name = "hello_world_cpp_static_linux_aarch64_tar",
    srcs = [":hello_world_cpp_static_linux_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "hello_world_cpp_static_linux_armv7",
    srcs = [":hello_world_cpp_static"],
    target_platform = "//platforms:armv7_linux",
)

pkg_tar(
    name = "hello_world_cpp_static_linux_armv7_tar",
    srcs = [":hello_world_cpp_static_linux_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)
