load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "hello_world_proto",
    srcs = ["hello_world.proto"],
)

cc_proto_library(
    name = "hello_world_cc_proto",
    deps = [":hello_world_proto"],
)

platform_transition_filegroup(
    name = "hello_world_cc_proto_linux_aarch64",
    target_platform = "//platforms:aarch64_linux",
    srcs = [":hello_world_cc_proto"],
)

pkg_tar(
    name = "hello_world_cc_proto_linux_aarch64_tar",
    srcs = [":hello_world_cc_proto_linux_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "hello_world_cc_proto_linux_armv7",
    target_platform = "//platforms:armv7_linux",
    srcs = [":hello_world_cc_proto"],
)

pkg_tar(
    name = "hello_world_cc_proto_linux_armv7_tar",
    srcs = [":hello_world_cc_proto_linux_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)
