# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "hello_world_proto",
    srcs = ["hello_world.proto"],
)

cc_proto_library(
    name = "hello_world_cc_proto",
    deps = [":hello_world_proto"],
)

platform_transition_filegroup(
    name = "hello_world_cc_proto_linux_aarch64",
    target_platform = "//platforms:aarch64_linux",
    srcs = [":hello_world_cc_proto"],
)

pkg_tar(
    name = "hello_world_cc_proto_linux_aarch64_tar",
    srcs = [":hello_world_cc_proto_linux_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "hello_world_cc_proto_linux_armv7",
    target_platform = "//platforms:armv7_linux",
    srcs = [":hello_world_cc_proto"],
)

pkg_tar(
    name = "hello_world_cc_proto_linux_armv7_tar",
    srcs = [":hello_world_cc_proto_linux_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)
