# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_proto//proto:defs.bzl", "proto_library")

build_test(
    name = "hello_world_cc_proto_build_test",
    targets = [
        ":hello_world_cc_proto",
        ":hello_world_cc_proto_linux_aarch64_tar",
        ":hello_world_cc_proto_linux_armv7_tar",
    ],
)

proto_library(
    name = "hello_world_proto",
    srcs = ["hello_world.proto"],
)

cc_proto_library(
    name = "hello_world_cc_proto",
    deps = [":hello_world_proto"],
)

platform_transition_filegroup(
    name = "hello_world_cc_proto_linux_aarch64",
    srcs = [":hello_world_cc_proto"],
    target_platform = "//platforms:aarch64_linux",
)

pkg_tar(
    name = "hello_world_cc_proto_linux_aarch64_tar",
    srcs = [":hello_world_cc_proto_linux_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "hello_world_cc_proto_linux_armv7",
    srcs = [":hello_world_cc_proto"],
    target_platform = "//platforms:armv7_linux",
)

pkg_tar(
    name = "hello_world_cc_proto_linux_armv7_tar",
    srcs = [":hello_world_cc_proto_linux_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)
