# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@aspect_gcc_toolchain//rules_fortran:defs.bzl", "fortran_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

fortran_binary(
    name = "tabulate_fortran",
    srcs = [
        "functions.f90",
        "tabulate.f90",
    ],
)

platform_transition_filegroup(
    name = "tabulate_fortran_aarch64",
    target_platform = "//platforms:aarch64_linux",
    srcs = [":tabulate_fortran"],
)

pkg_tar(
    name = "tabulate_fortran_aarch64_tar",
    srcs = [":tabulate_fortran_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "tabulate_fortran_armv7",
    target_platform = "//platforms:armv7_linux",
    srcs = [":tabulate_fortran"],
)

pkg_tar(
    name = "tabulate_fortran_armv7_tar",
    srcs = [":tabulate_fortran_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)
