# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Copyright (c) Thulio Ferraz Assis 2024
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules_fortran:defs.bzl", "fortran_binary")

build_test(
    name = "tabulate_fortran_build_test",
    targets = [
        ":tabulate_fortran",
        ":tabulate_fortran_aarch64_tar",
        ":tabulate_fortran_armv7_tar",
    ],
)

fortran_binary(
    name = "tabulate_fortran",
    srcs = [
        "functions.f90",
        "tabulate.f90",
    ],
)

platform_transition_filegroup(
    name = "tabulate_fortran_aarch64",
    srcs = [":tabulate_fortran"],
    target_platform = "//platforms:aarch64_linux",
)

pkg_tar(
    name = "tabulate_fortran_aarch64_tar",
    srcs = [":tabulate_fortran_aarch64"],
    include_runfiles = True,
    strip_prefix = "/",
)

platform_transition_filegroup(
    name = "tabulate_fortran_armv7",
    srcs = [":tabulate_fortran"],
    target_platform = "//platforms:armv7_linux",
)

pkg_tar(
    name = "tabulate_fortran_armv7_tar",
    srcs = [":tabulate_fortran_armv7"],
    include_runfiles = True,
    strip_prefix = "/",
)
